# Extraccion_SII_BekillyAPP

./: $PROFILE.txt  .env  .gitignore  .pre-commit-config.yaml  Act_ambiente wsl.txt  Bekilly SII.txt  Makefile  README.md  bekilly-up.bat  fix_future_imports.py  nohup.out  paso a paso.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  selenium_check.py  setup.cfg  wsl_env_check.sh
.devcontainer/: Dockerfile  devcontainer.json
config/: Credenciales.xlsx  Encabezados.xlsx  sample_config.yaml
debug/: debug_COMPRA_2024-01.html  debug_COMPRA_2024-02.html
docs/: decision_tree.md
src/bekillyapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/conciliacion/: cli.py  importacion.py  matching.py  normalizacion.py  reportes.py
src/conciliacion/sii/: consolidacion.py  orquestador.py
src/conciliacion/sii/extraccion/: common_rcv.py  extract_compra.py
tests/: test_calculo.py  test_normalizacion.py
